--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 aiohttp==3.8.4
-discord.py==2.3.2
+discord.py @ git+https://github.com/Rapptz/discord.py@0e58a927ddbc300a17ef0137d948faa659565313
 python-dateutil==2.8.2
